Infrastructure/AKS/namespace-ingress.yaml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "ingress",
    "labels": {
      "name": "ingress"
    }
  }
}
