Infrastructure/AKS/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simulationservice
  labels:
    app: simulationservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simulationservice
  template:
    metadata:
      labels:
        app: simulationservice
    spec:
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
      - name: simulationservice
        image: rutzscolabcr.azurecr.io/simulation/demo-api:latest
        imagePullPolicy: Always
        ports:
          - name: http
            containerPort: 80
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /api/status
            port: http
        readinessProbe:
          httpGet:
            path: /api/status
            port: http
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 1000m
            memory: 200Mi

---

kind: Service
apiVersion: v1
metadata:
  name: simulationservice
  labels:
    app: simulationservice
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
  selector:
    app: simulationservice
