Infrastructure/AKS/ingress-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simulation-service-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /simulationservice(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: simulationservice
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: simulationservice
            port:
              number: 80
